<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.b07fall2024.FinishActivity">

    <!-- Top header -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue_green"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/carbon_footprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/carbon_fooprint"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- Thank you Image -->
    <ImageView
        android:id="@+id/thankyou"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/thankyou"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Space element to add space between the image and the buttons -->
    <Space
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/thankyou"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- LinearLayout for End Quiz Button -->
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/thankyou"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/end_quiz"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_quiz"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/round_blue_green"
            android:elevation="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:cardCornerRadius="24dp"/>
    </LinearLayout>

    <!-- LinearLayout for Restart Quiz Button -->
    <LinearLayout
        android:id="@+id/buttonContainer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Back_to_Dashboard"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/round_blue_green"
            android:elevation="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:cardCornerRadius="24dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

